# godot-gsplat

./: .gitignore  Cargo.toml  README.md  README_ja.md  godot_gsplat.gdextension  project.godot
.github/workflows/: ci.yaml  release.yaml
addons/godot_gsplat/: pack_converter_dock.gd  plugin.cfg  plugin.gd
addons/godot_gsplat/runtime/: gltf_registration.gd  register_gsplat.gd
demo/: minimal_demo.gd  minimal_demo.tscn  minimal_demo2.gd  minimal_demo2.tscn  minimal_demo_xr.gd  orbit_camera.gd
samples/minimal_gsplat/: minimal_point.gltf
src/: asset.rs  backend.rs  chunking.rs  cloud_settings.rs  gltf_extension.rs  gsplat_pack.rs  import_options.rs  import_state.rs  lib.rs  node.rs  preview_mesh.rs  render_manager.rs  render_packet.rs  scene_import_plugin.rs
src/node/: chunk_streaming.rs  gpu_sort.rs  mod.rs  render_build.rs  shaders.rs
tests/: gsplat_test_util.gd  load_gltf_path.gd  load_sample.gd  reimport_gltf_clamp.gd  scene_roundtrip.gd  smoke.gd
tools/: README.md  ply_to_khr_gaussian_gltf.py
