[package]
name = "godot_gsplat"
version = "0.1.0"
edition = "2021"
authors = ["KOGA Mitsuhiro <shiena.jp@gmail.com>"]
repository = "https://github.com/shiena/godot-gsplat"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# experimental-threads: the glTF import callbacks must be callable from a
# background loader thread (see demo/minimal_demo.gd), and the chunk-rebuild
# worker logs through the Godot binding off the main thread.
godot = { version = "0.5", features = ["api-4-5", "experimental-threads"] }

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
